# six_nsw_property_download

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: register_weekly_dat_task.ps1  weekly_dat_upload.py
src/six_nsw_property_download/: __init__.py  cli.py  config.py  db.py  downloader.py  env.py  logging_config.py  pipeline.py  timezone.py  transform.py  urls.py  weekly_dat.py  weekly_pipeline.py
tests/: test_db.py  test_env.py  test_transform.py
tools/: build_dat_excel.mjs  build_weekly_new_records_xlsx.mjs  export_weekly_dat_new_records.py
