[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "six-nsw-property-download"
version = "0.1.0"
description = "Download and normalize NSW SIX property sales CSV files."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "keyring>=25.0",
    "openpyxl>=3.1",
    "psycopg[binary]>=3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
]

[project.scripts]
six-property-download = "six_nsw_property_download.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
